forth/test/fail/test_load_arg_min.af
\ Must fail to compile.
fun: test_load_arg_min_fail { -- err }
  @
end
